feat: add JVM engine and garbage collector selection settings